# DeepLearningHWs

FINAL_PROJECT/: README.md  labels.csv  pyproject.toml
FINAL_PROJECT/data/ctu_chb_data/: index.html
FINAL_PROJECT/data/processed/: labeled_ehr.csv  labels_no_20min_gaps.csv  labels_no_2min_gaps.csv  phenotype_1_labels.csv  phenotype_2_labels.csv  signal_id_mapping.json
FINAL_PROJECT/models/: lightgbm_best_model.joblib  lightgbm_model.txt  mamba_pretrained_next_token_prediction.pth  transformer.pth
FINAL_PROJECT/notebooks/: Final_Project_Preprocessing.ipynb  exploration.ipynb  mamba_model.ipynb  pretrained_transformer_time_series.ipynb
FINAL_PROJECT/scripts/: EHR_LightGBM.py  LightGBM_Transformer.py  Signals_Transformer.py  evaluate.py  get_ehr.py  get_labels.py  get_signals.py  load_data.py  mamba.py  signal_preprocessing.py  train_LSTM.py
HW1/: LetNet5_batch_norm.pth  LetNet5_dropout.pth  LetNet5_weight_decay.pth  LetNet5_without_reg.pth  README.md  lenet5.ipynb  model_LeNet5_bn.pth  model_LeNet5_dropout.pth  model_LeNet5_vanilla.pth  model_LeNet5_weight_decay.pth  pyproject.toml
HW1/results/: lenet5_results.csv
HW3/: README.md  problem3_semisupervised.ipynb
HW3/data/: fashion_mnist.py
HW3/models/: VAE.py  vae_model_100.pth  vae_model_1000.pth  vae_model_3000.pth  vae_model_600.pth
