[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = "environment for DL final project"
authors = ["DevL <dvora.leibowitz@gmail.com>"]
readme = "README.md"
packages = [{include = "dl_project"}]  # Ensure Poetry finds a package

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
wfdb = ">=4.2.0,<5.0.0"
requests = ">=2.32.3,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
torch = ">=2.6.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
