[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = "environment for DL final project"
authors = ["DevL <dvora.leibowitz@gmail.com>"]
readme = "README.md"
packages = [{include = "dl_project"}]  # Ensure Poetry finds a package

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
wfdb = ">=4.2.0,<5.0.0"
requests = ">=2.32.3,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
torch = ">=2.6.0,<3.0.0"
seaborn = "^0.13.2"
keras = "^3.8.0"
ucimlrepo = "^0.0.7"
lightgbm = "^4.6.0"
joblib = "^1.4.2"
transformers = "^4.50.3"
tensorboard = "^2.19.0"
datasets = "^3.5.0"
hubert-ecg = {git = "https://github.com/Edoar-do/HuBERT-ECG.git", rev = "master"}  # Custom ECG model

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
