[tool.poetry]
name = "hw1"
version = "0.1.0"
description = "deep learning hw1 environment"
authors = ["DevL <dvora.leibowitz@gmail.com>"]
license = "TAU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torchvision = "^0.20.1"
torch = "^2.5.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
